[project]
name = "rofi-rbw"
version = "1.5.1"
description = "Rofi frontend for Bitwarden"
authors = [
    {name = "Fabian Winter", email = "5821180+fdw@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ConfigArgParse>1.3,<2.0.0",
]

[project.urls]
homepage = "https://github.com/fdw/rofi-rbw"
repository = "https://github.com/fdw/rofi-rbw"

[project.scripts]
rofi-rbw = "rofi_rbw.__main__:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rofi_rbw"]
include = ["docs/rofi-rbw.1"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
