[metadata]
name = rofi-rbw
version = attr: rofi_rbw.rofi_rbw.__version__
author = fdw
author_email = 5821180+fdw@users.noreply.github.com
description = Rofi frontend for Bitwarden
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdw/rofi-rbw
project_urls =
    Source = https://github.com/fdw/rofi-rbw
    Bug Tracker = https://github.com/fdw/rofi-rbw/issues
    Changelog = https://github.com/fdw/rofi-rbw/blob/main/CHANGELOG.md
license: MIT
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = rofi_rbw
python_requires = >=3.7
install_requires =
    ConfigArgParse>0.15,<2.0.0

[options.entry_points]
console_scripts =
    rofi-rbw = rofi_rbw.rofi_rbw:main
